Added date files

--- a/Store analysis.ipynb
+++ b/Store analysis.ipynb
@@ -2,15 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7e7d47e5",
+   "execution_count": 1,
+   "id": "8d3e3390",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as"
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "112aeca8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
