--- a/Store analysis.ipynb
+++ b/Store analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "c8ecd4a8",
    "metadata": {},
    "outputs": [],
@@ -15,22 +15,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "8074a12e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_stores = pd.read_csv('store-sales-time-series-forecasting/stores.csv')"
+    "train1 = pd.read_csv('store-sales-time-series-forecasting/train1.csv')\n",
+    "train2 = pd.read_csv('store-sales-time-series-forecasting/train2.csv')\n",
+    "train3 = pd.read_csv('store-sales-time-series-forecasting/train3.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "3d2d4491",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('store-sales-time-series-forecasting/train.csv')"
+    "train = pd.concat([train1, train2, train3], axis=0).drop(columns='Unnamed: 0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "52dc1a58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>store_nbr</th>\n",
+       "      <th>family</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>onpromotion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>AUTOMOTIVE</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BABY CARE</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BEAUTY</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BEVERAGES</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BOOKS</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id        date  store_nbr      family  sales  onpromotion\n",
+       "0   0  2013-01-01          1  AUTOMOTIVE    0.0            0\n",
+       "1   1  2013-01-01          1   BABY CARE    0.0            0\n",
+       "2   2  2013-01-01          1      BEAUTY    0.0            0\n",
+       "3   3  2013-01-01          1   BEVERAGES    0.0            0\n",
+       "4   4  2013-01-01          1       BOOKS    0.0            0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.family."
    ]
   },
   {
