added time dummy

--- a/Store analysis.ipynb
+++ b/Store analysis.ipynb
@@ -37,105 +37,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "52dc1a58",
+   "execution_count": 26,
+   "id": "33526a95",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>date</th>\n",
-       "      <th>store_nbr</th>\n",
-       "      <th>family</th>\n",
-       "      <th>sales</th>\n",
-       "      <th>onpromotion</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>AUTOMOTIVE</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>BABY CARE</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>BEAUTY</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>BEVERAGES</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>BOOKS</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   id        date  store_nbr      family  sales  onpromotion\n",
-       "0   0  2013-01-01          1  AUTOMOTIVE    0.0            0\n",
-       "1   1  2013-01-01          1   BABY CARE    0.0            0\n",
-       "2   2  2013-01-01          1      BEAUTY    0.0            0\n",
-       "3   3  2013-01-01          1   BEVERAGES    0.0            0\n",
-       "4   4  2013-01-01          1       BOOKS    0.0            0"
+       "AUTOMOTIVE                    90936\n",
+       "HOME APPLIANCES               90936\n",
+       "SCHOOL AND OFFICE SUPPLIES    90936\n",
+       "PRODUCE                       90936\n",
+       "PREPARED FOODS                90936\n",
+       "POULTRY                       90936\n",
+       "PLAYERS AND ELECTRONICS       90936\n",
+       "PET SUPPLIES                  90936\n",
+       "PERSONAL CARE                 90936\n",
+       "MEATS                         90936\n",
+       "MAGAZINES                     90936\n",
+       "LIQUOR,WINE,BEER              90936\n",
+       "LINGERIE                      90936\n",
+       "LAWN AND GARDEN               90936\n",
+       "LADIESWEAR                    90936\n",
+       "HOME CARE                     90936\n",
+       "HOME AND KITCHEN II           90936\n",
+       "BABY CARE                     90936\n",
+       "HOME AND KITCHEN I            90936\n",
+       "HARDWARE                      90936\n",
+       "GROCERY II                    90936\n",
+       "GROCERY I                     90936\n",
+       "FROZEN FOODS                  90936\n",
+       "EGGS                          90936\n",
+       "DELI                          90936\n",
+       "DAIRY                         90936\n",
+       "CLEANING                      90936\n",
+       "CELEBRATION                   90936\n",
+       "BREAD/BAKERY                  90936\n",
+       "BOOKS                         90936\n",
+       "BEVERAGES                     90936\n",
+       "BEAUTY                        90936\n",
+       "SEAFOOD                       90936\n",
+       "Name: family, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train.family."
+    "train.family.value_counts()"
    ]
   },
   {
